landing-page-redesign
Replaced every picture along with their absolutely positioned book information

--- a/index.html
+++ b/index.html
@@ -52,16 +52,6 @@
         />
       </div>
       <div class="main-content-wrapper">
-        <div class="search-sort-div">
-          <div class="search-div">
-            <img src="./assets/loop-icon.svg" alt="loop-icon" />
-            <input type="text" />
-          </div>
-          <div class="sort-div">
-            <p>სორტირება</p>
-            <img src="./assets/dropdown-icon.svg" alt="dropdown-icon" />
-          </div>
-        </div>
         <div class="filter-books-wrapper">
           <section class="filter-section">
             <button class="filter-clear-button">ფილტრაციის გასუფთავება</button>
@@ -195,244 +185,356 @@
           </section>
           <section class="books-section">
             <a href="./view/book-details.html">
-              <div class="card">
+              <article class="card">
                 <img
-                  src="./assets/book-card-img.png"
+                  src="./assets/landing-page-cards/kako-kachagi.jpg"
                   alt="book-cover"
                   class="book-cover"
                 />
                 <div class="book-info">
-                  <h2>სახელწოდება</h2>
-                  <p>გამომცემლობა</p>
-                  <div class="book-additional-info">
-                    <p>2024</p>
-                    <div class="book-views">
-                      <img src="./assets/views-icon.svg" alt="views-icon" />
-                      <p>29</p>
-                    </div>
+
+                  <div class="book-views">
+                    <img src="./assets/mdi_eye.svg" alt="eye-icon">
+                    <p>29</p>
                   </div>
+
+                  <div class="title-share">
+                    <h2>კაკო ყაჩაღი</h2>
+                    <img src="./assets/share-icon.svg" alt="share-icon" >
+                  </div>
+
                 </div>
-              </div>
+              </article>
             </a>
             <a href="./view/book-details.html">
-              <div class="card">
+              <article class="card">
                 <img
-                  src="./assets/book-card-img.png"
+                  src="./assets/landing-page-cards/mepe-demetre-tavdadebuli.jpg"
                   alt="book-cover"
                   class="book-cover"
                 />
                 <div class="book-info">
-                  <h2>სახელწოდება</h2>
-                  <p>გამომცემლობა</p>
-                  <div class="book-additional-info">
-                    <p>2024</p>
-                    <div class="book-views">
-                      <img src="./assets/views-icon.svg" alt="views-icon" />
-                      <p>29</p>
-                    </div>
+
+                  <div class="book-views">
+                    <img src="./assets/mdi_eye.svg" alt="eye-icon">
+                    <p>29</p>
                   </div>
+
+                  <div class="title-share">
+                    <h2>კაკო ყაჩაღი</h2>
+                    <img src="./assets/share-icon.svg" alt="share-icon" >
+                  </div>
+
                 </div>
-              </div>
+              </article>
             </a>
             <a href="./view/book-details.html">
-              <div class="card">
+              <article class="card">
                 <img
-                  src="./assets/book-card-img.png"
+                  src="./assets/landing-page-cards/ilia-chavchavadze.jpg"
                   alt="book-cover"
                   class="book-cover"
                 />
                 <div class="book-info">
-                  <h2>სახელწოდება</h2>
-                  <p>გამომცემლობა</p>
-                  <div class="book-additional-info">
-                    <p>2024</p>
-                    <div class="book-views">
-                      <img src="./assets/views-icon.svg" alt="views-icon" />
-                      <p>29</p>
-                    </div>
+
+                  <div class="book-views">
+                    <img src="./assets/mdi_eye.svg" alt="eye-icon">
+                    <p>29</p>
                   </div>
+
+                  <div class="title-share">
+                    <h2>კაკო ყაჩაღი</h2>
+                    <img src="./assets/share-icon.svg" alt="share-icon" >
+                  </div>
+
                 </div>
-              </div>
+              </article>
             </a>
             <a href="./view/book-details.html">
-              <div class="card">
+              <article class="card">
                 <img
-                  src="./assets/book-card-img.png"
+                  src="./assets/landing-page-cards/sarchobelazed.png"
                   alt="book-cover"
                   class="book-cover"
                 />
                 <div class="book-info">
-                  <h2>სახელწოდება</h2>
-                  <p>გამომცემლობა</p>
-                  <div class="book-additional-info">
-                    <p>2024</p>
-                    <div class="book-views">
-                      <img src="./assets/views-icon.svg" alt="views-icon" />
-                      <p>29</p>
-                    </div>
+
+                  <div class="book-views">
+                    <img src="./assets/mdi_eye.svg" alt="eye-icon">
+                    <p>29</p>
                   </div>
+
+                  <div class="title-share">
+                    <h2>კაკო ყაჩაღი</h2>
+                    <img src="./assets/share-icon.svg" alt="share-icon" >
+                  </div>
+
                 </div>
-              </div>
+              </article>
             </a>
             <a href="./view/book-details.html">
-              <div class="card">
+              <article class="card">
                 <img
-                  src="./assets/book-card-img.png"
+                  src="./assets/landing-page-cards/poezia-targmanebi-werilebi.png"
                   alt="book-cover"
                   class="book-cover"
                 />
                 <div class="book-info">
-                  <h2>სახელწოდება</h2>
-                  <p>გამომცემლობა</p>
-                  <div class="book-additional-info">
-                    <p>2024</p>
-                    <div class="book-views">
-                      <img src="./assets/views-icon.svg" alt="views-icon" />
-                      <p>29</p>
-                    </div>
+
+                  <div class="book-views">
+                    <img src="./assets/mdi_eye.svg" alt="eye-icon">
+                    <p>29</p>
                   </div>
+
+                  <div class="title-share">
+                    <h2>კაკო ყაჩაღი</h2>
+                    <img src="./assets/share-icon.svg" alt="share-icon" >
+                  </div>
+
                 </div>
-              </div>
+              </article>
             </a>
             <a href="./view/book-details.html">
-              <div class="card">
+              <article class="card">
                 <img
-                  src="./assets/book-card-img.png"
+                  src="./assets/landing-page-cards/leqsebi.png"
                   alt="book-cover"
                   class="book-cover"
                 />
                 <div class="book-info">
-                  <h2>სახელწოდება</h2>
-                  <p>გამომცემლობა</p>
-                  <div class="book-additional-info">
-                    <p>2024</p>
-                    <div class="book-views">
-                      <img src="./assets/views-icon.svg" alt="views-icon" />
-                      <p>29</p>
-                    </div>
+
+                  <div class="book-views">
+                    <img src="./assets/mdi_eye.svg" alt="eye-icon">
+                    <p>29</p>
                   </div>
+
+                  <div class="title-share">
+                    <h2>კაკო ყაჩაღი</h2>
+                    <img src="./assets/share-icon.svg" alt="share-icon" >
+                  </div>
+
                 </div>
-              </div>
+              </article>
             </a>
             <a href="./view/book-details.html">
-              <div class="card">
+              <article class="card">
                 <img
-                  src="./assets/book-card-img.png"
+                  src="./assets/landing-page-cards/sagandzuri.jpg"
                   alt="book-cover"
                   class="book-cover"
                 />
                 <div class="book-info">
-                  <h2>სახელწოდება</h2>
-                  <p>გამომცემლობა</p>
-                  <div class="book-additional-info">
-                    <p>2024</p>
-                    <div class="book-views">
-                      <img src="./assets/views-icon.svg" alt="views-icon" />
-                      <p>29</p>
-                    </div>
+
+                  <div class="book-views">
+                    <img src="./assets/mdi_eye.svg" alt="eye-icon">
+                    <p>29</p>
                   </div>
+
+                  <div class="title-share">
+                    <h2>კაკო ყაჩაღი</h2>
+                    <img src="./assets/share-icon.svg" alt="share-icon" >
+                  </div>
+
                 </div>
-              </div>
+              </article>
             </a>
             <a href="./view/book-details.html">
-              <div class="card">
+              <article class="card">
                 <img
-                  src="./assets/book-card-img.png"
+                  src="./assets/landing-page-cards/saskolo-biblioteka.jpg"
                   alt="book-cover"
                   class="book-cover"
                 />
                 <div class="book-info">
-                  <h2>სახელწოდება</h2>
-                  <p>გამომცემლობა</p>
-                  <div class="book-additional-info">
-                    <p>2024</p>
-                    <div class="book-views">
-                      <img src="./assets/views-icon.svg" alt="views-icon" />
-                      <p>29</p>
-                    </div>
+
+                  <div class="book-views">
+                    <img src="./assets/mdi_eye.svg" alt="eye-icon">
+                    <p>29</p>
                   </div>
+
+                  <div class="title-share">
+                    <h2>კაკო ყაჩაღი</h2>
+                    <img src="./assets/share-icon.svg" alt="share-icon" >
+                  </div>
+
                 </div>
-              </div>
+              </article>
             </a>
             <a href="./view/book-details.html">
-              <div class="card">
+              <article class="card">
                 <img
-                  src="./assets/book-card-img.png"
+                  src="./assets/landing-page-cards/motkhrobebi.jpg"
                   alt="book-cover"
                   class="book-cover"
                 />
                 <div class="book-info">
-                  <h2>სახელწოდება</h2>
-                  <p>გამომცემლობა</p>
-                  <div class="book-additional-info">
-                    <p>2024</p>
-                    <div class="book-views">
-                      <img src="./assets/views-icon.svg" alt="views-icon" />
-                      <p>29</p>
-                    </div>
+
+                  <div class="book-views">
+                    <img src="./assets/mdi_eye.svg" alt="eye-icon">
+                    <p>29</p>
                   </div>
+
+                  <div class="title-share">
+                    <h2>კაკო ყაჩაღი</h2>
+                    <img src="./assets/share-icon.svg" alt="share-icon" >
+                  </div>
+
                 </div>
-              </div>
+              </article>
             </a>
             <a href="./view/book-details.html">
-              <div class="card">
+              <article class="card">
                 <img
-                  src="./assets/book-card-img.png"
+                  src="./assets/landing-page-cards/kacia-adamiani.png"
                   alt="book-cover"
                   class="book-cover"
                 />
                 <div class="book-info">
-                  <h2>სახელწოდება</h2>
-                  <p>გამომცემლობა</p>
-                  <div class="book-additional-info">
-                    <p>2024</p>
-                    <div class="book-views">
-                      <img src="./assets/views-icon.svg" alt="views-icon" />
-                      <p>29</p>
-                    </div>
+
+                  <div class="book-views">
+                    <img src="./assets/mdi_eye.svg" alt="eye-icon">
+                    <p>29</p>
                   </div>
+
+                  <div class="title-share">
+                    <h2>კაკო ყაჩაღი</h2>
+                    <img src="./assets/share-icon.svg" alt="share-icon" >
+                  </div>
+
                 </div>
-              </div>
+              </article>
             </a>
             <a href="./view/book-details.html">
-              <div class="card">
+              <article class="card">
                 <img
-                  src="./assets/book-card-img.png"
+                  src="./assets/landing-page-cards/qvata-ghaghadi.png"
                   alt="book-cover"
                   class="book-cover"
                 />
                 <div class="book-info">
-                  <h2>სახელწოდება</h2>
-                  <p>გამომცემლობა</p>
-                  <div class="book-additional-info">
-                    <p>2024</p>
-                    <div class="book-views">
-                      <img src="./assets/views-icon.svg" alt="views-icon" />
-                      <p>29</p>
-                    </div>
+
+                  <div class="book-views">
+                    <img src="./assets/mdi_eye.svg" alt="eye-icon">
+                    <p>29</p>
                   </div>
+
+                  <div class="title-share">
+                    <h2>კაკო ყაჩაღი</h2>
+                    <img src="./assets/share-icon.svg" alt="share-icon" >
+                  </div>
+
                 </div>
-              </div>
+              </article>
             </a>
             <a href="./view/book-details.html">
-              <div class="card">
+              <article class="card">
                 <img
-                  src="./assets/book-card-img.png"
+                  src="./assets/landing-page-cards/otaraant-qvrivi.jpg"
                   alt="book-cover"
                   class="book-cover"
                 />
                 <div class="book-info">
-                  <h2>სახელწოდება</h2>
-                  <p>გამომცემლობა</p>
-                  <div class="book-additional-info">
-                    <p>2024</p>
-                    <div class="book-views">
-                      <img src="./assets/views-icon.svg" alt="views-icon" />
-                      <p>29</p>
-                    </div>
+
+                  <div class="book-views">
+                    <img src="./assets/mdi_eye.svg" alt="eye-icon">
+                    <p>29</p>
                   </div>
+
+                  <div class="title-share">
+                    <h2>კაკო ყაჩაღი</h2>
+                    <img src="./assets/share-icon.svg" alt="share-icon" >
+                  </div>
+
                 </div>
-              </div>
+              </article>
+            </a>
+            <a href="./view/book-details.html">
+              <article class="card">
+                <img
+                  src="./assets/landing-page-cards/tserilebi-da-motxrobebi.jpg"
+                  alt="book-cover"
+                  class="book-cover"
+                />
+                <div class="book-info">
+
+                  <div class="book-views">
+                    <img src="./assets/mdi_eye.svg" alt="eye-icon">
+                    <p>29</p>
+                  </div>
+
+                  <div class="title-share">
+                    <h2>კაკო ყაჩაღი</h2>
+                    <img src="./assets/share-icon.svg" alt="share-icon" >
+                  </div>
+
+                </div>
+              </article>
+            </a>
+            <a href="./view/book-details.html">
+              <article class="card">
+                <img
+                  src="./assets/landing-page-cards/katsia-adamiani.jpg"
+                  alt="book-cover"
+                  class="book-cover"
+                />
+                <div class="book-info">
+
+                  <div class="book-views">
+                    <img src="./assets/mdi_eye.svg" alt="eye-icon">
+                    <p>29</p>
+                  </div>
+
+                  <div class="title-share">
+                    <h2>კაკო ყაჩაღი</h2>
+                    <img src="./assets/share-icon.svg" alt="share-icon" >
+                  </div>
+
+                </div>
+              </article>
+            </a>
+            <a href="./view/book-details.html">
+              <article class="card">
+                <img
+                  src="./assets/landing-page-cards/tserilebi.jpg"
+                  alt="book-cover"
+                  class="book-cover"
+                />
+                <div class="book-info">
+
+                  <div class="book-views">
+                    <img src="./assets/mdi_eye.svg" alt="eye-icon">
+                    <p>29</p>
+                  </div>
+
+                  <div class="title-share">
+                    <h2>კაკო ყაჩაღი</h2>
+                    <img src="./assets/share-icon.svg" alt="share-icon" >
+                  </div>
+
+                </div>
+              </article>
+            </a>
+            <a href="./view/book-details.html">
+              <article class="card">
+                <img
+                  src="./assets/landing-page-cards/motxrobebi.png"
+                  alt="book-cover"
+                  class="book-cover"
+                />
+                <div class="book-info">
+
+                  <div class="book-views">
+                    <img src="./assets/mdi_eye.svg" alt="eye-icon">
+                    <p>29</p>
+                  </div>
+
+                  <div class="title-share">
+                    <h2>კაკო ყაჩაღი</h2>
+                    <img src="./assets/share-icon.svg" alt="share-icon" >
+                  </div>
+
+                </div>
+              </article>
             </a>
           </section>
         </div>
