--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <div class="navigation">
             <nav>
               <ul>
-                <li><a href="#" class="active-header">მთავარი</a></li>
+                <li><a href="./index.html" class="active-header">მთავარი</a></li>
                 <li><a href="#">პროექტის შესახებ</a></li>
               </ul>
             </nav>
