--- a/index.html
+++ b/index.html
@@ -198,9 +198,17 @@
                     <p>29</p>
                   </div>
 
-                  <div class="title-share">
-                    <h2>კაკო ყაჩაღი</h2>
-                    <img src="./assets/share-icon.svg" alt="share-icon" >
+                  <div class="title-share"> 
+                    
+                    <div class="title-share-default">
+                      <h2>კაკო ყაჩაღი</h2>
+                      <img src="./assets/share-icon.svg" alt="share-icon" >
+                    </div>
+                    <div class="title-share-hover">
+                      <p>გამომცემელი</p>
+                      <span>2024</span>
+                    </div>
+                    
                   </div>
 
                 </div>
