--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
                 <li>
                   <a href="./index.html" class="active-header">მთავარი</a>
                 </li>
-                <li><a href="#">პროექტის შესახებ</a></li>
+                <li>
+                  <a href="./view/about-project.html">პროექტის შესახებ</a>
+                </li>
               </ul>
             </nav>
           </div>
