--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
             <a href="./view/book-details.html">
               <article class="card">
                 <img
-                  src="./assets/landing-page-cards/kako-kachagi.jpg"
+                  src="./assets/landing-page-cards/gandegili.jpg"
                   alt="book-cover"
                   class="book-cover"
                 />
@@ -258,7 +258,7 @@
 
                   <div class="title-share">
                     <div class="title-share-default">
-                      <h2>კაკო ყაჩაღი</h2>
+                      <h2>განდეგილი</h2>
                       <img src="./assets/share-icon.svg" alt="share-icon" />
                     </div>
                     <div class="title-share-hover">
@@ -284,7 +284,7 @@
 
                   <div class="title-share">
                     <div class="title-share-default">
-                      <h2>კაკო ყაჩაღი</h2>
+                      <h2>მეფე დემეტრე თავდადებული</h2>
                       <img src="./assets/share-icon.svg" alt="share-icon" />
                     </div>
                     <div class="title-share-hover">
