--- a/index.html
+++ b/index.html
@@ -664,9 +664,13 @@
         <div class="pagination-container">
           <div class="pagination-wrapper">
             <img src="./assets/pagination-arrow.svg" alt="pagination-arrow" />
-            <p>1</p>
-            <p class="active">2</p>
-            <p>3</p>
+            <div class="pagination-numbers">
+              <p>1</p>
+              <p class="active">2</p>
+              <p>3</p>
+              <p>...</p>
+              <p>9</p>
+            </div>
             <img src="./assets/pagination-arrow.svg" alt="pagination-arrow" />
           </div>
         </div>
