--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </div>
       <div class="main-content-wrapper">
         <div class="filter-books-wrapper">
-          <section class="filter-section">
+          <aside class="filter-section">
             <section class="buttons-section">
               <div class="search-container">
                 <img
@@ -81,15 +81,16 @@
 
               <section>
                 <ul class="dropdown-options">
-                  <li data-value="name-asc">დასახელება (ა-ჰ)</li>
-                  <li data-value="name-desc">დასახელება (ჰ-ა)</li>
-                  <li data-value="year-asc">მონაცემთა წელი (ზრდადი)</li>
-                  <li data-value="year-desc">მონაცემთა წელი (კლებადი)</li>
+                  <li class = "option" data-value="name-asc">დასახელება (ა-ჰ)</li>
+                  <li class = "option" data-value="name-desc">დასახელება (ჰ-ა)</li>
+                  <li class = "option" data-value="year-asc">მონაცემთა წელი (ზრდადი)</li>
+                  <li class = "option" data-value="year-desc">მონაცემთა წელი (კლებადი)</li>
                 </ul>
               </section>
 
-              <div class="dropdownUnderline"></div>
             </section>
+
+            <div class="dropdownUnderline"></div>
 
             <div class="clean-filters">
               <img
@@ -240,7 +241,7 @@
                 </div>
               </div>
             </section>
-          </section>
+          </aside>
 
           <section class="books-section">
             <a href="./view/book-details.html">
