--- a/index.html
+++ b/index.html
@@ -263,8 +263,8 @@
                       <img src="./assets/share-icon.svg" alt="share-icon" />
                     </div>
                     <div class="title-share-hover">
-                      <p>გამომცემელი</p>
-                      <span>2024</span>
+                      <p>საბჭოთა მწერალი</p>
+                      <span>1957</span>
                     </div>
                   </div>
                 </div>
@@ -289,7 +289,7 @@
                       <img src="./assets/share-icon.svg" alt="share-icon" />
                     </div>
                     <div class="title-share-hover">
-                      <p>გამომცემელი</p>
+                      <p>საბას წიგნები</p>
                       <span>2024</span>
                     </div>
                   </div>
@@ -311,11 +311,11 @@
 
                   <div class="title-share">
                     <div class="title-share-default">
-                      <h2>კაკო ყაჩაღი</h2>
+                      <h2>საქართველოს ილუსტრირებული ისტორია</h2>
                       <img src="./assets/share-icon.svg" alt="share-icon" />
                     </div>
                     <div class="title-share-hover">
-                      <p>გამომცემელი</p>
+                      <p>პალიტრა L</p>
                       <span>2024</span>
                     </div>
                   </div>
@@ -337,11 +337,11 @@
 
                   <div class="title-share">
                     <div class="title-share-default">
-                      <h2>კაკო ყაჩაღი</h2>
+                      <h2>სახრჩობელაზედ</h2>
                       <img src="./assets/share-icon.svg" alt="share-icon" />
                     </div>
                     <div class="title-share-hover">
-                      <p>გამომცემელი</p>
+                      <p>საბას წიგნები</p>
                       <span>2024</span>
                     </div>
                   </div>
@@ -363,11 +363,11 @@
 
                   <div class="title-share">
                     <div class="title-share-default">
-                      <h2>კაკო ყაჩაღი</h2>
+                      <h2>პოეზია, თარგმანები, წერილები</h2>
                       <img src="./assets/share-icon.svg" alt="share-icon" />
                     </div>
                     <div class="title-share-hover">
-                      <p>გამომცემელი</p>
+                      <p>პალიტრა L</p>
                       <span>2024</span>
                     </div>
                   </div>
@@ -389,11 +389,11 @@
 
                   <div class="title-share">
                     <div class="title-share-default">
-                      <h2>კაკო ყაჩაღი</h2>
+                      <h2>ლექსები</h2>
                       <img src="./assets/share-icon.svg" alt="share-icon" />
                     </div>
                     <div class="title-share-hover">
-                      <p>გამომცემელი</p>
+                      <p>საბას წიგნები</p>
                       <span>2024</span>
                     </div>
                   </div>
@@ -415,11 +415,11 @@
 
                   <div class="title-share">
                     <div class="title-share-default">
-                      <h2>კაკო ყაჩაღი</h2>
+                      <h2>საბავშვო ლექსები და მოთხრობები</h2>
                       <img src="./assets/share-icon.svg" alt="share-icon" />
                     </div>
                     <div class="title-share-hover">
-                      <p>გამომცემელი</p>
+                      <p>საქართველოს მაცნე</p>
                       <span>2024</span>
                     </div>
                   </div>
@@ -441,11 +441,11 @@
 
                   <div class="title-share">
                     <div class="title-share-default">
-                      <h2>კაკო ყაჩაღი</h2>
+                      <h2>პროზა, წერილები, პოეზია</h2>
                       <img src="./assets/share-icon.svg" alt="share-icon" />
                     </div>
                     <div class="title-share-hover">
-                      <p>გამომცემელი</p>
+                      <p>ბაკმი</p>
                       <span>2024</span>
                     </div>
                   </div>
@@ -467,11 +467,11 @@
 
                   <div class="title-share">
                     <div class="title-share-default">
-                      <h2>კაკო ყაჩაღი</h2>
+                      <h2>მოთხრობები</h2>
                       <img src="./assets/share-icon.svg" alt="share-icon" />
                     </div>
                     <div class="title-share-hover">
-                      <p>გამომცემელი</p>
+                      <p>პალიტრა L</p>
                       <span>2024</span>
                     </div>
                   </div>
@@ -493,11 +493,11 @@
 
                   <div class="title-share">
                     <div class="title-share-default">
-                      <h2>კაკო ყაჩაღი</h2>
+                      <h2>კაცია-ადამიანი?!</h2>
                       <img src="./assets/share-icon.svg" alt="share-icon" />
                     </div>
                     <div class="title-share-hover">
-                      <p>გამომცემელი</p>
+                      <p>პალიტრა L</p>
                       <span>2024</span>
                     </div>
                   </div>
@@ -519,11 +519,11 @@
 
                   <div class="title-share">
                     <div class="title-share-default">
-                      <h2>კაკო ყაჩაღი</h2>
+                      <h2>ქვათა ღაღადი</h2>
                       <img src="./assets/share-icon.svg" alt="share-icon" />
                     </div>
                     <div class="title-share-hover">
-                      <p>გამომცემელი</p>
+                      <p>საბას წიგნები</p>
                       <span>2024</span>
                     </div>
                   </div>
@@ -545,11 +545,11 @@
 
                   <div class="title-share">
                     <div class="title-share-default">
-                      <h2>კაკო ყაჩაღი</h2>
+                      <h2>ოთარაანთ ქვრივი</h2>
                       <img src="./assets/share-icon.svg" alt="share-icon" />
                     </div>
                     <div class="title-share-hover">
-                      <p>გამომცემელი</p>
+                      <p>თბილისი</p>
                       <span>2024</span>
                     </div>
                   </div>
@@ -571,11 +571,11 @@
 
                   <div class="title-share">
                     <div class="title-share-default">
-                      <h2>კაკო ყაჩაღი</h2>
+                      <h2>წერილები და მოთხრობები</h2>
                       <img src="./assets/share-icon.svg" alt="share-icon" />
                     </div>
                     <div class="title-share-hover">
-                      <p>გამომცემელი</p>
+                      <p>ბაკურ სულაკაურის გამომცემლობა</p>
                       <span>2024</span>
                     </div>
                   </div>
@@ -597,11 +597,11 @@
 
                   <div class="title-share">
                     <div class="title-share-default">
-                      <h2>კაკო ყაჩაღი</h2>
+                      <h2>კაცია-ადამიანი?!</h2>
                       <img src="./assets/share-icon.svg" alt="share-icon" />
                     </div>
                     <div class="title-share-hover">
-                      <p>გამომცემელი</p>
+                      <p>საქართველოს მაცნე</p>
                       <span>2024</span>
                     </div>
                   </div>
@@ -623,11 +623,11 @@
 
                   <div class="title-share">
                     <div class="title-share-default">
-                      <h2>კაკო ყაჩაღი</h2>
+                      <h2>წერილები</h2>
                       <img src="./assets/share-icon.svg" alt="share-icon" />
                     </div>
                     <div class="title-share-hover">
-                      <p>გამომცემელი</p>
+                      <p>ილიაუნის გამომცემლობა</p>
                       <span>2024</span>
                     </div>
                   </div>
@@ -649,11 +649,11 @@
 
                   <div class="title-share">
                     <div class="title-share-default">
-                      <h2>კაკო ყაჩაღი</h2>
+                      <h2>მოთხრობები</h2>
                       <img src="./assets/share-icon.svg" alt="share-icon" />
                     </div>
                     <div class="title-share-hover">
-                      <p>გამომცემელი</p>
+                      <p>iBooks</p>
                       <span>2024</span>
                     </div>
                   </div>
