moved styles to footer component

--- a/index.html
+++ b/index.html
@@ -81,13 +81,18 @@
 
               <section>
                 <ul class="dropdown-options">
-                  <li class = "option" data-value="name-asc">დასახელება (ა-ჰ)</li>
-                  <li class = "option" data-value="name-desc">დასახელება (ჰ-ა)</li>
-                  <li class = "option" data-value="year-asc">მონაცემთა წელი (ზრდადი)</li>
-                  <li class = "option" data-value="year-desc">მონაცემთა წელი (კლებადი)</li>
+                  <li class="option" data-value="name-asc">დასახელება (ა-ჰ)</li>
+                  <li class="option" data-value="name-desc">
+                    დასახელება (ჰ-ა)
+                  </li>
+                  <li class="option" data-value="year-asc">
+                    მონაცემთა წელი (ზრდადი)
+                  </li>
+                  <li class="option" data-value="year-desc">
+                    მონაცემთა წელი (კლებადი)
+                  </li>
                 </ul>
               </section>
-
             </section>
 
             <div class="dropdownUnderline"></div>
