--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <link rel="stylesheet" href="./styles/css/global.css" />
   </head>
 
-  <body>
+  <body class="landing-page">
     <!-- Header -->
     <header>
-      <div class="header_wrapper container">
+      <div class="container header_wrapper">
         <div class="header_components">
           <!-- Logo -->
           <div class="logo">
