footer is up to date on all pages

--- a/index.html
+++ b/index.html
@@ -684,28 +684,51 @@
     </main>
 
     <!-- Footer -->
-    <footer>
+    <footer class="about-project-footer">
       <section class="footer-main-info">
         <div class="container">
           <div class="contacts-container">
-            <p>კონტაქტი</p>
+            <h2>კონტაქტი</h2>
             <div class="contacts-wrapper">
-              <div class="contacts">
-                <img src="./assets/phone-icon.svg" alt="phone-icon" />
-                <p>(+995 32) 222 00 09</p>
-              </div>
-              <div class="contacts">
-                <img src="./assets/email-icon.svg" alt="email-icon" />
-                <p>info@iliauni.edu.ge</p>
-              </div>
-              <div class="contacts">
-                <img src="./assets/location-icon.svg" alt="location-icon" />
-                <p>ქაქუცა ჩოლოყაშვილის 3/5</p>
-              </div>
-              <div class="contacts">
-                <img src="./assets/link-icon.svg" alt="link-icon" />
-                <a href="#">https://library.iliauni.edu.ge/</a>
-              </div>
+              <ul>
+                <li>
+                  <a href="tel:(+995-32)222-00-09">
+                    <img src="../assets/phone-icon.svg" alt="phone icon" />(+995
+                    32) 222 00 09 <span>(116)</span></a
+                  >
+                </li>
+                <li>
+                  <a href="mailto:library@iliauni@edu.ge">
+                    <img
+                      id="css-email"
+                      src="../assets/email-icon.svg"
+                      alt="email icon"
+                    />library@iliauni@edu.ge</a
+                  >
+                </li>
+
+                <li>
+                  <a
+                    href="https://www.google.com/maps/place/%E1%83%98%E1%83%9A%E1%83%98%E1%83%90%E1%83%A1+%E1%83%A1%E1%83%90%E1%83%AE%E1%83%94%E1%83%9A%E1%83%9B%E1%83%AC%E1%83%98%E1%83%A4%E1%83%9D+%E1%83%A3%E1%83%9C%E1%83%98%E1%83%95%E1%83%94%E1%83%A0%E1%83%A1%E1%83%98%E1%83%A2%E1%83%94%E1%83%A2%E1%83%98/@41.7085521,44.7691021,17z/data=!4m6!3m5!1s0x40447332ce83ce27:0x88f10503a3a86e1d!8m2!3d41.7088973!4d44.7708867!16s%2Fm%2F02pmq51?entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <img
+                      src="../assets/location-icon.svg"
+                      alt="location-icon"
+                    />
+                    ილიას სახელმწიფო უნივერსიტეტი, ქაქუცა ჩოლოყაშვილის 3/5
+                  </a>
+                </li>
+                <li>
+                  <a href="">
+                    <img
+                      src="../assets/link-icon.svg"
+                      alt="link icon"
+                    />library.iliauni.edu.ge</a
+                  >
+                </li>
+              </ul>
             </div>
           </div>
           <div class="usage-container">
@@ -714,18 +737,29 @@
           </div>
           <div class="unilab-team-container">
             <div class="logo-container">
-              <img src="./assets/iliauni-logo.svg" alt="iliauni-logo" />
-              <img src="./assets/unilab-logo.svg" alt="unilab-logo" />
+              <a
+                href="https://iliauni.edu.ge/ge"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <img src="../assets/iliauni-logo.svg" alt="iliauni-logo"
+              /></a>
+              <a
+                href="https://unilab.iliauni.edu.ge/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <img src="../assets/unilab-logo.svg" alt="unilab-logo"
+              /></a>
             </div>
-            <p>ვებსაიტზე იმუშავა უნილაბის გუნდმა</p>
+            <p>ვებგვერდზე იმუშავა უნილაბის გუნდმა</p>
           </div>
         </div>
       </section>
       <section class="footer-additional-info">
-        <div class="container">
+        <aside class="container">
           <p>ილიას სახელმწიფო უნივერსიტეტი 2024. ყველა უფლება დაცულია.</p>
-          <img src="./assets/facebook-icon.svg" alt="facebook-icon" />
-        </div>
+        </aside>
       </section>
     </footer>
 
