--- a/index.html
+++ b/index.html
@@ -693,7 +693,7 @@
               <ul>
                 <li>
                   <a href="tel:(+995-32)222-00-09">
-                    <img src="../assets/phone-icon.svg" alt="phone icon" />(+995
+                    <img src="./assets/phone-icon.svg" alt="phone icon" />(+995
                     32) 222 00 09 <span>(116)</span></a
                   >
                 </li>
@@ -701,7 +701,7 @@
                   <a href="mailto:library@iliauni@edu.ge">
                     <img
                       id="css-email"
-                      src="../assets/email-icon.svg"
+                      src="./assets/email-icon.svg"
                       alt="email icon"
                     />library@iliauni@edu.ge</a
                   >
@@ -713,17 +713,14 @@
                     target="_blank"
                     rel="noopener noreferrer"
                   >
-                    <img
-                      src="../assets/location-icon.svg"
-                      alt="location-icon"
-                    />
+                    <img src="./assets/location-icon.svg" alt="location-icon" />
                     ილიას სახელმწიფო უნივერსიტეტი, ქაქუცა ჩოლოყაშვილის 3/5
                   </a>
                 </li>
                 <li>
                   <a href="">
                     <img
-                      src="../assets/link-icon.svg"
+                      src="./assets/link-icon.svg"
                       alt="link icon"
                     />library.iliauni.edu.ge</a
                   >
@@ -742,14 +739,14 @@
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <img src="../assets/iliauni-logo.svg" alt="iliauni-logo"
+                <img src="./assets/iliauni-logo.svg" alt="iliauni-logo"
               /></a>
               <a
                 href="https://unilab.iliauni.edu.ge/"
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <img src="../assets/unilab-logo.svg" alt="unilab-logo"
+                <img src="./assets/unilab-logo.svg" alt="unilab-logo"
               /></a>
             </div>
             <p>ვებგვერდზე იმუშავა უნილაბის გუნდმა</p>
